# Autonomous-Drone

./: .gitignore  .me  check_mavlink_vio.py  check_slam_status.py  run_vio_simulation.sh  setup_dds_transport.sh  setup_orbslam.sh  setup_project.sh  start_vio_system.sh  test_gazebo_cameras.sh
config/: camera_visualization.rviz  gazebo_mono.yaml  gz_bridge.yaml  oakd_mono.yaml
doc/testing/simulation/: TEAM_ORB_SLAM_SETUP.md  pose_to_sitl_instruction.md  pose_to_sitl_result.md
install/: local_setup.sh  setup.sh
install/depthai_cam/lib/depthai_cam/: oak_publisher
install/depthai_cam/share/depthai_cam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/depthai_cam/share/depthai_cam/config/: x500_depth.rviz
install/depthai_cam/share/depthai_cam/launch/: depthai_cam_sim.launch.py
install/depthai_cam/share/depthai_cam/models/OakD-Lite/: model.sdf
install/depthai_cam/share/depthai_cam/models/x500_depth/: model.sdf
install/depthai_cam/share/depthai_cam/worlds/: depthai_test.world
ros2_ws/: cleanup_ros2.sh  setup.sh
ros2_ws/src/depthai_cam/: package.xml  setup.cfg  setup.py
ros2_ws/src/depthai_cam/config/: x500_depth.rviz
ros2_ws/src/depthai_cam/depthai_cam/: oak_publisher.py  static_tf_publisher.py
ros2_ws/src/depthai_cam/launch/: depthai_cam_sim.launch.py
ros2_ws/src/depthai_cam/models/: oak_rgb_camera.sdf
ros2_ws/src/depthai_cam/models/OakD-Lite/: model.sdf
ros2_ws/src/depthai_cam/models/x500_depth/: model.sdf
ros2_ws/src/depthai_cam/worlds/: depthai_test.world
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/install/vio_bringup/share/vio_bringup/: package.bash  package.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/orbslam3_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/orbslam3_bridge/src/: orbslam3_mono_node.cpp
ros2_ws/src/vio_bringup/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/vio_bringup/launch/: camera_simulation.launch.py  camera_simulation_no_hardware.launch.py  camera_simulation_vio.launch.py  camera_visualization.launch.py  external_orbslam3.launch.py  gazebo_camera_vio.launch.py  vio_oakd_orbslam3.launch.py  vio_simulated_orbslam3.launch.py  vio_sitl_mavros.launch.py
ros2_ws/src/vio_bringup/scripts/: camera_bridge.py  camera_bridge.sh  camera_simulator.py  gz_camera_bridge.py  gz_imu_bridge.py  gz_physics_imu_bridge.py  imu_simulator.py
ros2_ws/src/vio_mavlink_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/vio_mavlink_bridge/scripts/: mock_pose_publisher.py  publish_ned_pose.py  sample_ned_poses.csv
ros2_ws/src/vio_mavlink_bridge/src/: orb_slam3_bridge_node.cpp  vio_mavlink_bridge_direct_node.cpp  vio_mavlink_bridge_node.cpp  vio_sitl_test_node.cpp
ros2_ws/src/vio_perception/: package.xml  setup.cfg  setup.py
~/.ros/: fastdds.xml
