<?xml version="1.0"?>
<package format="3">
  <name>orbslam3_bridge</name>
  <version>0.0.1</version>
  <description>ROS2 bridge node for ORB-SLAM3 (monocular)</description>

  <maintainer email="shraypatel@gmail.com">Shray Patel</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

